2024-04-16 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove blank output line generated in ifup script when bringing
	  up wireless interface.

2023-10-04 Pierre Labastie <pierre.labastie@neuf.fr>
   * After the changes done on 2022-03-24, several "halt stop" should
     have been changed to "halt start". Done now. Fortunately, those
     occur only when something wrong happens with disks or devices.

2023-07-28 Xi Ruoyao <xry111@xry111.site>
   * In mountvirtfs, mount /sys/fs/cgroup for udev from systemd-254.

2023-07-22 Xi Ruoyao <xry111@xry111.site>
   * In mountvirtfs, create symlinks /dev/{fd,std{in,out,err}} and
     /dev/core (optional).

2023-07-16 Xi Ruoyao <xry111@xry111.site>
   * In udev, set SYSTEMD_LOG_TARGET=kmsg so systemd-udevd will correctly
     log messages.

2023-07-15 Xi Ruoyao <xry111@xry111.site>
   * Use /bin/udevadm instead of /sbin/udevadm.

2022-09-30 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Mount /dev/shm as a tmpfs.

2022-07-23 Thomas Trepl <thomas@linuxfromscratch.org>
   * Mark an raid array clean when root (/) has been remounted
     r/o when system goes down. Otherwise, array does remain
     always 'dirty', causing a resync at next boot.

2022-03-24 Pierre Labastie <pierre dot labastie at neuf dot fr>
   * New semantics for K and S scripts:
     - S scripts only started if not already marked S in the previous runlevel
     - K scripts only started if not already marked K in the previous runlevel
     - remove the convention of running S scripts with "stop" in rl 0/6
2021-06-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * When shutting down the network, ignore invalid interfaces
     or interfaces that are not UP.

2021-06-02 Thomas Trepl <thomas@linuxfromscratch.org>
   * Prevent sendsignals from killing an active mdmon

2021-04-28 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Make check_signal more robust.
   * Use a better methog for killproc to remove a dead pid file.
   * Clarify what signals killproc accepts.